--- a/web/pokemon/singles_with_description.html
+++ b/web/pokemon/singles_with_description.html
@@ -114,21 +114,6 @@
         <img src="https://i.ebayimg.com/images/g/KI4AAOSwajloOs6O/s-l140.webp" alt="Doctor Hanos Avatar" class="avatar">
       </div>
 
-      <!-- Item Description -->
-      <div class="item-description">
-        <h3>Item Description</h3>
-        <p>Welcome to Doctor Hanos Pokémon Cards! Explore our collection of singles from the Japanese-exclusive <strong>Pokemon TCG: Journey Together</strong> set. Each card is carefully selected, guaranteed genuine, and in Near Mint condition unless stated otherwise.</p>
-      </div>
-
-      <!-- Shipping Information -->
-      <div class="shipping-info">
-        <h3>Shipping Information</h3>
-        <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
-        <p>All cards are shipped securely in sleeves with cardboard backing.</p>
-        <p><strong>Domestic:</strong> Australia Post Domestic Regular Letter Untracked (2 - 8 Business Days) from Echuca VIC.</p>
-        <p><strong>International:</strong> Australia Post International Standard (3 - 10 Business Days) from Echuca VIC.</p>
-      </div>
-
       <!-- Series Details Table -->
       <div class="series-details">
         <table>
@@ -153,6 +138,21 @@
             <td>Near Mint</td>
           </tr>
         </table>
+      </div>
+
+      <!-- Item Description -->
+      <div class="item-description">
+        <h3>Item Description</h3>
+        <p>Pokemon TCG Journey Together Fresh Pack Singles - Complete your set today!</p>
+      </div>
+
+      <!-- Shipping Information -->
+      <div class="shipping-info">
+        <h3>Shipping Information</h3>
+        <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
+        <p>All cards are shipped securely in sleeves with cardboard backing.</p>
+        <p><strong>Domestic:</strong> Australia Post Domestic Regular Letter Untracked (2 - 8 Business Days) from Echuca VIC.</p>
+        <p><strong>International:</strong> Australia Post International Standard (3 - 10 Business Days) from Echuca VIC.</p>
       </div>
 
     </div>
