--- a/web/pokemon/singles_with_description.html
+++ b/web/pokemon/singles_with_description.html
@@ -10,7 +10,7 @@
     }
 
     .description-box {
-      background: url('background.png') no-repeat center top;
+      background: url('https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/bg/background.png') no-repeat center top;
       background-size: cover;
       padding: 20px;
       border-radius: 12px;
