Update mtg ff layout

--- a/web/final_fantasy/singles_with_description.html
+++ b/web/final_fantasy/singles_with_description.html
@@ -5,20 +5,20 @@
     body {
       margin: 0;
       font-family: 'Verdana', sans-serif;
-      background: #f3e7d3;
       color: #000000;
     }
 
     .description-box {
-      background: url('background_ff.png') no-repeat center top;
+      background: url('https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/bg/background_ff.png') no-repeat center top;
       background-size: cover;
       padding: 20px;
       border-radius: 12px;
+      width: 100%;
     }
 
     .container {
-      max-width: 750px;
-      margin: 0 auto;
+      width: 100%;
+      max-width: 100%;
       padding: 20px;
       background-color: rgba(255, 255, 255, 0.5);
       border-radius: 12px;
@@ -79,15 +79,15 @@
 
       <!-- Header Banner -->
       <div class="series-header">
-        <img src="doctor_hanos_logo.png" alt="Doctor Hanos Logo" class="logo-doctorhanos">
-        <img src="mtg_ff_logo.png" alt="MTG Final Fantasy Logo" class="series-logo">
-        <img src="doctor_hanos_avatar_web.jpg" alt="Doctor Hanos Avatar" class="avatar">
+        <img src="https://images.ctfassets.net/s5n2t79q9icq/3r9u7rmfidCloU8YuMyZbx/61928f6125f5979b6b7a8928d371bc17/bweui83g2491msdz-660x500.png" alt="MTG Final Fantasy Logo" class="series-logo">
+        <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/avatar.jpg" alt="Doctor Hanos Avatar" class="avatar">
       </div>
 
       <!-- Combined Info Section -->
       <div class="combined-info">
         <h3>About This Set</h3>
         <p>Explore the epic crossover between two legendary franchises with <strong>Magic: The Gathering – Final Fantasy</strong>. All cards are pack fresh and ready to be added to your collection, finsh your set today!</p>
+        <br>
         <p><strong>Series Name:</strong> Magic: The Gathering – Final Fantasy</p>
         <p><strong>Release Date:</strong> 2025</p>
         <p><strong>Card Type:</strong> Standard Set</p>
@@ -106,6 +106,7 @@
         <p><strong>International:</strong> Australia Post International Standard (3 - 10 Business Days)</p>
         <p>Shipped with ❤️ from Echuca, Victoria</p>
       </div>
+
     </div>
   </div>
 </body>
