Add Tokyo Pixel Background

--- a/web/music/description.html
+++ b/web/music/description.html
@@ -74,7 +74,7 @@
 
       <!-- Header Banner -->
       <div class="series-header">
-        <img src="retro_logo.png" alt="Doctor Hanos Vinyl & Cassette Logo" class="retro-logo">
+        <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/logo_future_music.png" alt="Doctor Hanos Vinyl & Cassette Logo" class="retro-logo">
       </div>
 
       <!-- Combined Info Section -->
@@ -92,9 +92,7 @@
       <div class="shipping-info">
         <h3>Shipping Information</h3>
         <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
-        <p>All items are shipped with protective packaging to ensure safe delivery.</p>
-        <p><strong>Domestic:</strong> Australia Post Regular (2 - 8 Business Days) from Echuca VIC.</p>
-        <p><strong>International:</strong> Australia Post International Standard (3 - 10 Business Days) from Echuca VIC.</p>
+        <p>Shipped with ❤️ from Echuca, Victoria</p>
       </div>
 
     </div>
