Add example with album

--- a/web/music/description.html
+++ b/web/music/description.html
@@ -80,6 +80,7 @@
 
     .album-details {
       flex: 1;
+      color: #ffffff;
     }
 
     @media (max-width: 700px) {
@@ -105,22 +106,22 @@
 
       <!-- Header Banner -->
       <div class="series-header">
-        <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/logo_future_music.png" alt="Doctor Hanos Vinyl & Cassette Logo" class="retro-logo">
+        <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/logo_future_music.png" alt="Doctor Hanos Vinyl &amp; Cassette Logo" class="retro-logo">
       </div>
 
       <!-- Album Section with Image and Details -->
       <div class="album-section">
-        <img src="album_cover.png" alt="Album Cover">
+        <img src="https://i.discogs.com/icVCpfqZPLd-idn9O2-U80StEWkeZiAVFunKfKEonHk/rs:fit/g:sm/q:90/h:588/w:600/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTEzOTY5/MDAyLTE1NzQyMTIx/MTgtMTI4OS5qcGVn.jpeg" alt="Album Cover">
         <div class="album-details">
           <h3>About This Release</h3>
-          <p><strong>Album:</strong> Plastic Whatever</p>
+          <p><strong>Album:</strong> The Sweetest Dream</p>
           <p><strong>Artist:</strong> Desired</p>
-          <p><strong>Label:</strong> Neoncity Records – SRT006, Sailor Team – SRT006</p>
-          <p><strong>Format:</strong> Cassette, Album, Limited Edition, Reissue, Stereo, pink</p>
+          <p><strong>Label:</strong> Neoncity Records – NCR004</p>
+          <p><strong>Format:</strong> Cassette, Album, Limited Edition, Reissue, Blue Transparent</p>
           <p><strong>Country:</strong> Hong Kong</p>
-          <p><strong>Released:</strong> 9 May 2023</p>
-          <p><strong>Genre:</strong> Electronicp</p>
-          <p><strong>Style:</strong> Vaporwave, Nu-Disco</p>
+          <p><strong>Released:</strong> 1 Jun 2019</p>
+          <p><strong>Genre:</strong> Electronic</p>
+          <p><strong>Style:</strong> Nu-Disco, Vaporwave, J-pop</p>
           <p><strong>Condition:</strong> Very Good (VG+)</p>
         </div>
       </div>
