--- a/web/music/description.html
+++ b/web/music/description.html
@@ -122,7 +122,7 @@
           <p><strong>Released:</strong> 1 Jun 2019</p>
           <p><strong>Genre:</strong> Electronic</p>
           <p><strong>Style:</strong> Nu-Disco, Vaporwave, J-pop</p>
-          <p><strong>Condition:</strong> Very Good (VG+)</p>
+          <p><strong>Condition:</strong> Very Good Plus (VG+)</p>
         </div>
       </div>
 
