--- a/web/pokemon/singles_with_description.html
+++ b/web/pokemon/singles_with_description.html
@@ -110,49 +110,51 @@
       <!-- Header Banner -->
       <div class="series-header">
         <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/logo.png" alt="Doctor Hanos Logo" class="logo-doctorhanos">
-        <img src="hotairarena.png" alt="Set Logo" class="series-logo">
+        <img src="https://i.ebayimg.com/images/g/sSEAAOSwLf1oSV9S/s-l1600.webp" alt="Set Logo" class="series-logo">
         <img src="https://i.ebayimg.com/images/g/KI4AAOSwajloOs6O/s-l140.webp" alt="Doctor Hanos Avatar" class="avatar">
       </div>
 
       <!-- Series Details Table -->
       <div class="series-details">
         <table>
-          <tr>
+          <tbody><tr>
             <th>Attribute</th>
             <th>Value</th>
           </tr>
           <tr>
-            <td>Series Name</td>
-            <td>Pokemon TCG: Journey Together</td>
+            <td>Set Name</td>
+            <td>Snow Hazard</td>
+          </tr>
+          <tr>
+            <td>Set Identifier</td>
+            <td>sv2P</td>
           </tr>
           <tr>
             <td>Release Date</td>
-            <td>March 28, 2025</td>
+            <td>April 14, 2023</td>
           </tr>
           <tr>
             <td>Number of Cards</td>
-            <td>190</td>
+            <td>99</td>
           </tr>
           <tr>
             <td>Condition</td>
-            <td>Near Mint</td>
+            <td>Lightly Played</td>
           </tr>
-        </table>
+        </tbody></table>
       </div>
 
       <!-- Item Description -->
       <div class="item-description">
         <h3>Item Description</h3>
-        <p>Pokemon TCG Journey Together Fresh Pack Singles - Complete your set today!</p>
+        <p>Pokemon TCG Japanese Snow Hazard Singles - Complete your set today!</p>
       </div>
 
       <!-- Shipping Information -->
       <div class="shipping-info">
         <h3>Shipping Information</h3>
         <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
-        <p>All cards are shipped securely in sleeves with cardboard backing.</p>
-        <p><strong>Domestic:</strong> Australia Post Domestic Regular Letter Untracked (2 - 8 Business Days) from Echuca VIC.</p>
-        <p><strong>International:</strong> Australia Post International Standard (3 - 10 Business Days) from Echuca VIC.</p>
+        <p>Shipped with ❤️ from Echuca, Victoria</p>
       </div>
 
     </div>
