Update bg layout

--- a/web/final_fantasy/singles_with_description.html
+++ b/web/final_fantasy/singles_with_description.html
@@ -10,7 +10,7 @@
 
     .description-box {
       background: url('https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/bg/background_ff.png') no-repeat center top;
-      background-size: cover;
+      background-size: auto;
       padding: 20px;
       border-radius: 12px;
       width: 100%;
