--- a/web/pokemon/set_singles_with_description.html
+++ b/web/pokemon/set_singles_with_description.html
@@ -117,10 +117,7 @@
       <!-- Series Details Table -->
       <div class="series-details">
         <table>
-          <tbody><tr>
-            <th>Attribute</th>
-            <th>Value</th>
-          </tr>
+          <tbody>
           <tr>
             <td>Set Name</td>
             <td>Snow Hazard</td>
