Update Pokemon single card with description

--- a/web/pokemon/card_single_with_description.html
+++ b/web/pokemon/card_single_with_description.html
@@ -115,13 +115,13 @@
     <!-- Header Banner -->
     <div class="series-header">
       <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/logo.png" alt="Doctor Hanos Logo" class="logo-doctorhanos">
-      <img src="https://archives.bulbagarden.net/media/upload/thumb/2/26/SV3.5_Logo_EN.png/180px-SV3.5_Logo_EN.png" alt="Set Logo" class="series-logo">
+      <img src="https://tcg.pokemon.com/assets/img/sv-expansions/journey-together/logo/en-us/sv9-logo.png" alt="Set Logo" class="series-logo">
       <img src="https://i.ebayimg.com/images/g/KI4AAOSwajloOs6O/s-l140.webp" alt="Doctor Hanos Avatar" class="avatar">
     </div>
 
     <!-- Card Images -->
     <div class="card-images">
-      <img src="https://dz3we2x72f7ol.cloudfront.net/expansions/151/en-us/SV3pt5_EN_196.png" alt="Front of Erika's Invitation card">
+      <img src="https://dz3we2x72f7ol.cloudfront.net/expansions/journey-together/en-us/SV09_EN_162.png" alt="Front of Card">
       <img src="https://tcg.pokemon.com/assets/img/global/tcg-card-back.jpg" alt="Back of Pokémon card">
     </div>
 
@@ -131,35 +131,23 @@
         <tbody>
           <tr>
             <td>Set Name</td>
-            <td>Scarlet &amp; Violet: 151</td>
+            <td>Scarlet &amp; Violet - Journey Together</td>
           </tr>
           <tr>
             <td>Card Number</td>
-            <td>196/165</td>
+            <td>162/159</td>
           </tr>
           <tr>
             <td>Card Name</td>
-            <td>Erika's Invitation</td>
+            <td>Wailord</td>
           </tr>
           <tr>
             <td>Rarity</td>
-            <td>Ultra Rare</td>
-          </tr>
-          <tr>
-            <td>Card Type</td>
-            <td>Trainer - Supporter</td>
-          </tr>
-          <tr>
-            <td>Effect</td>
-            <td>Your opponent reveals their hand, and you may put a Basic Pokémon you find there onto your opponent's Bench.</td>
-          </tr>
-          <tr>
-            <td>Illustrator</td>
-            <td>kirisAki</td>
+            <td>Illustration Rare</td>
           </tr>
           <tr>
             <td>Release Date</td>
-            <td>September 22, 2023</td>
+            <td>March 28, 2025</td>
           </tr>
           <tr>
             <td>Condition</td>
@@ -171,7 +159,7 @@
 
     <!-- Item Description -->
     <div class="item-description">
-      <p>Fresh Pack Mint Scarlet &amp; Violet: 151 Erika's Invitation 196/165 Ultra Rare card.</p>
+      <p>Fresh Pack Mint Scarlet &amp; Violet - Journey Together Wailord 162/159 Illustration Rare.</p>
     </div>
 
     <!-- Shipping Information -->
