Update shipping desc

--- a/web/pokemon/set_singles_with_description.html
+++ b/web/pokemon/set_singles_with_description.html
@@ -148,11 +148,11 @@
       </div>
 
       <!-- Shipping Information -->
-      <div class="shipping-info">
-        <h3>Shipping Information</h3>
-        <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
-        <p>Shipped with ❤️ from Echuca, Victoria</p>
-      </div>
+    <div class="shipping-info">
+      <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
+      <p>Cards are shipped using a tag sleeve, a grading card protector and a team bag for their journey to you.</p>
+      <p>Shipped with ❤️ from Echuca, Victoria</p>
+    </div>
 
     </div>
   </div>
