--- a/web/final_fantasy/singles_with_description.html
+++ b/web/final_fantasy/singles_with_description.html
@@ -100,6 +100,7 @@
       <div class="shipping-info">
         <h3>Shipping Information</h3>
         <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
+        <p>Cards are shipped using a tag sleeve, a grading card protector and a team bag for their journey to you.</p>
         <p>Shipped with ❤️ from Echuca, Victoria</p>
       </div>
 
