--- a/web/pokemon/card_single_with_description.html
+++ b/web/pokemon/card_single_with_description.html
@@ -165,6 +165,7 @@
     <!-- Shipping Information -->
     <div class="shipping-info">
       <p>Same Business Day Shipping if ordered before 2pm AEST, otherwise Next Business Day.</p>
+      <p>Cards are shipped using a tag sleeve, a grading card protector and a team bag for their journey to you.</p>
       <p>Shipped with ❤️ from Echuca, Victoria</p>
     </div>
 
