Update ebay listing descriptions

--- a/web/final_fantasy/set_singles_with_description.html
+++ b/web/final_fantasy/set_singles_with_description.html
@@ -10,7 +10,7 @@
 
     .description-box {
       background: url('https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/bg/background_ff.png') no-repeat center top;
-      background-size: auto;
+      background-size: cover;
       padding: 20px;
       border-radius: 12px;
       width: 100%;
@@ -79,6 +79,7 @@
 
       <!-- Header Banner -->
       <div class="series-header">
+        <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/collectables_logo.png" alt="Doctor Hanos Logo" class="logo-doctorhanos">
         <img src="https://images.ctfassets.net/s5n2t79q9icq/3r9u7rmfidCloU8YuMyZbx/61928f6125f5979b6b7a8928d371bc17/bweui83g2491msdz-660x500.png" alt="MTG Final Fantasy Logo" class="series-logo">
         <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/avatar.jpg" alt="Doctor Hanos Avatar" class="avatar">
       </div>
