--- a/web/final_fantasy/card_single_with_description.html
+++ b/web/final_fantasy/card_single_with_description.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -63,20 +62,21 @@
       color: #2b2b2b;
     }
 
-    .series-details {
-      background: #ffffff;
-      border: 3px solid #2b2b2b;
-      border-radius: 18px;
-      padding: 20px;
-      margin-bottom: 30px;
+    .item-description h3 {
+      margin-top: 0;
+      font-size: 20px;
+      margin-bottom: 10px;
+      color: #2b2b2b;
+      text-align: left;
     }
 
-    .series-details table {
+    .item-description table {
       width: 100%;
       border-collapse: collapse;
+      margin-top: 15px;
     }
 
-    .series-details td {
+    .item-description td {
       padding: 10px;
       border-bottom: 1px solid #ccc;
       text-align: left;
@@ -84,21 +84,34 @@
       color: #2b2b2b;
     }
 
-    .series-details td:first-child {
+    .item-description td:first-child {
       font-weight: bold;
       width: 40%;
     }
 
-    .card-images img {
+    .card-images {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .card-image-block {
       width: 48%;
+    }
+
+    .card-image-block img {
+      width: 100%;
       border-radius: 12px;
       border: 2px solid #2b2b2b;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-      margin-right: 2%;
     }
 
-    .card-images img:last-child {
-      margin-right: 0;
+    .card-images h3 {
+      margin-top: 0;
+      font-size: 20px;
+      margin-bottom: 10px;
+      color: #2b2b2b;
+      text-align: center;
     }
 
     @media (max-width: 700px) {
@@ -108,12 +121,12 @@
         text-align: center;
       }
 
-      .card-images img {
+      .card-image-block {
         width: 100%;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
       }
 
-      .card-images img:last-child {
+      .card-image-block img:last-child {
         margin-bottom: 0;
       }
     }
@@ -125,37 +138,39 @@
 
       <!-- Header Banner -->
       <div class="series-header">
-        <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/logo.png" alt="Doctor Hanos Logo" class="logo-doctorhanos">
+        <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/collectables_logo.png" alt="Doctor Hanos Logo" class="logo-doctorhanos">
         <img src="https://images.ctfassets.net/s5n2t79q9icq/3r9u7rmfidCloU8YuMyZbx/61928f6125f5979b6b7a8928d371bc17/bweui83g2491msdz-660x500.png" alt="MTG Final Fantasy Logo" class="series-logo">
         <img src="https://raw.githubusercontent.com/doctorhanos/doctorhanos-html/refs/heads/main/assets/branding/avatar.jpg" alt="Doctor Hanos Avatar" class="avatar">
       </div>
 
-      <!-- Card Images -->
+      <!-- Card Images with Headings -->
       <div class="card-images">
-        <img src="https://example.com/bartz-front.jpg" alt="Front of Bartz Klauser card">
-        <img src="https://example.com/mtg-card-back.jpg" alt="Back of MTG card">
+        <div class="card-image-block">
+          <h3>Front Card</h3>
+          <img src="https://example.com/bartz-front.jpg" alt="Front of Bartz Klauser card">
+        </div>
+        <div class="card-image-block">
+          <h3>Back Card</h3>
+          <img src="https://example.com/mtg-card-back.jpg" alt="Back of MTG card">
+        </div>
       </div>
 
-      <!-- Series Details Table -->
-      <div class="series-details">
+      <!-- Merged Item Description and Card Details -->
+      <div class="item-description">
+        <h3>Item Description</h3>
+        <p>Pack Fresh Bartz Klauser Borderless (209/182) Mythic Rare card from Magic: The Gathering – Final Fantasy Universes Beyond set. Ready for play or display!</p>
+
+        <h3>Card Details</h3>
         <table>
           <tbody>
             <tr><td>Set Name</td><td>Magic: The Gathering – Final Fantasy</td></tr>
             <tr><td>Card Number</td><td>209/182</td></tr>
             <tr><td>Card Name</td><td>Bartz Klauser</td></tr>
             <tr><td>Rarity</td><td>Mythic Rare</td></tr>
-            <tr><td>Card Type</td><td>Legendary Creature — Warrior</td></tr>
-            <tr><td>Effect</td><td>Vigilance, Haste. Bartz Klauser gains abilities based on Job counters.</td></tr>
-            <tr><td>Illustrator</td><td>Insert Artist Name</td></tr>
             <tr><td>Release Date</td><td>2025</td></tr>
             <tr><td>Condition</td><td>Near Mint</td></tr>
           </tbody>
         </table>
-      </div>
-
-      <!-- Item Description -->
-      <div class="item-description">
-        <p>Pack Fresh Bartz Klauser Borderless (209/182) Mythic Rare card from Magic: The Gathering – Final Fantasy Universes Beyond set. Ready for play or display!</p>
       </div>
 
       <!-- Shipping Information -->
