--- a/web/final_fantasy/card_single_with_description.html
+++ b/web/final_fantasy/card_single_with_description.html
@@ -16,7 +16,7 @@
     }
 
     .container {
-      max-width: 750px;
+      max-width: auto;
       margin: 0 auto;
       padding: 20px;
       background-color: #ffffff;
