--- a/web/final_fantasy/set_singles_with_description.html
+++ b/web/final_fantasy/set_singles_with_description.html
@@ -13,12 +13,12 @@
       background-size: cover;
       padding: 20px;
       border-radius: 12px;
-      width: 100%;
+      width: auto;
     }
 
     .container {
-      width: 100%;
-      max-width: 100%;
+      width: auto;
+      max-width: auto;
       padding: 20px;
       background-color: rgba(255, 255, 255, 0.5);
       border-radius: 12px;
