--- a/web/pokemon/card_single_with_description.html
+++ b/web/pokemon/card_single_with_description.html
@@ -7,7 +7,7 @@
   }
 
   .container {
-    max-width: 750px;
+    max-width: auto;
     margin: 0 auto;
     padding: 20px;
     background-color: #ffffff;
