--- a/web/pokemon/set_singles_with_description.html
+++ b/web/pokemon/set_singles_with_description.html
@@ -17,7 +17,7 @@
     }
 
     .container {
-      max-width: 750px;
+      max-width: auto;
       margin: 0 auto;
       padding: 20px;
       background-color: #ffffff;
